--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "unplugin-vue-components": "^29.0.0",
     "vite": "^7.1.4",
     "vitepress": "^1.6.4",
+    "vitepress-plugin-comment-with-giscus": "^1.1.15",
     "vitepress-plugin-group-icons": "^1.6.3",
     "vitepress-plugin-llms": "^1.8.0",
     "vue": "^3.4.38"
