refactor(docs): 重构文档配置并优化代码结构

--- a/docs/public/json/tips-release.json
+++ b/docs/public/json/tips-release.json
@@ -16,7 +16,7 @@
       "text": "点亮 GitHub ",
       "icon": "custom-icon custom-icon-github",
       "type": "primary",
-      "url": "https://github.com/anyup/wot-ui-plus"
+      "url": "https://gitee.com/my_spaces/wot-ui-plus"
     }
   ]
 }
