--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "outdated": "pnpm outdated",
     "store:prune": "pnpm store prune",
-    "dev": "vitepress dev docs --port 8888",
+    "dev": "vitepress dev docs",
     "build": "vitepress build docs && node ./scripts/llms-full-to-jsonl.js",
     "preview": "vitepress preview docs",
-    "docs:dev": "vitepress dev docs --port 8888",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
     "gen:sitemap": "node ./scripts/generate-sitemap.js",
