--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,43 +1,66 @@
-name: Deploy VitePress Site to GitHub Pages
+# 构建 VitePress 站点并将其部署到 GitHub Pages 的示例工作流程
+#
+name: Deploy VitePress site to Pages
 
 on:
+  # 在针对 `main` 分支的推送上运行。如果你
+  # 使用 `master` 分支作为默认分支，请将其更改为 `master`
   push:
     branches: [main]
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  # 允许你从 Actions 选项卡手动运行此工作流程
+  workflow_dispatch:
 
+# 设置 GITHUB_TOKEN 的权限，以允许部署到 GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# 只允许同时进行一次部署，跳过正在运行和最新队列之间的运行队列
+# 但是，不要取消正在进行的运行，因为我们希望允许这些生产部署完成
+concurrency:
+  group: pages
+  cancel-in-progress: false
+
+jobs:
+  # 构建工作
+  build:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
-          fetch-depth: 0
-
-      # 步骤 2：安装 Node.js（不变）
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+          fetch-depth: 0 # 如果未启用 lastUpdated，则不需要
+      - uses: pnpm/action-setup@v4 # 如果使用 pnpm，请取消此区域注释
+      #   with:
+      #     version: 9
+      # - uses: oven-sh/setup-bun@v1 # 如果使用 Bun，请取消注释
+      - name: Setup Node
+        uses: actions/setup-node@v6
         with:
-          node-version: 22
-          cache: 'pnpm'  # 关键：缓存 pnpm 依赖（原 npm 改为 pnpm）
-
-      # 步骤 3：安装 pnpm（若环境未预装，可选，保险起见添加）
-      - name: Install pnpm
-        uses: pnpm/action-setup@v3  # 官方 pnpm Action，确保环境有 pnpm
+          node-version: 22.21.1
+          cache: pnpm # 或 pnpm / yarn
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Install dependencies
+        run: pnpm install # 或 pnpm install / yarn install / bun install
+      - name: Build with VitePress
+        run: pnpm docs:build # 或 pnpm docs:build / yarn docs:build / bun run docs:build
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          version: latest  # 使用最新版 pnpm
+          path: docs/.vitepress/dist
 
-      # 步骤 4：安装项目依赖（pnpm 命令，替代 npm ci）
-      - name: Install Dependencies
-        run: pnpm install --frozen-lockfile  # 等价于 npm ci，严格按锁文件安装
-
-      # 步骤 5：构建静态文件（不变）
-      - name: Build VitePress Site
-        run: pnpm docs:build
-
-      # 步骤 6：部署（不变）
+  # 部署工作
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: build
+    runs-on: ubuntu-latest
+    name: Deploy
+    steps:
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/.vitepress/dist
+        id: deployment
+        uses: actions/deploy-pages@v4
