--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vueuse/core": "^13.9.0",
     "axios": "^1.11.0",
+    "busuanzi.pure.js": "^1.0.3",
     "element-plus": "^2.11.1",
     "markdown-it-mathjax3": "^4.3.2",
     "rollup-plugin-visualizer": "^5.9.0",
